--- a/No1.html
+++ b/No1.html
@@ -29,8 +29,8 @@
       <p>itte jldi nhi mtt bol🙄</p>
 
       <div class="btn">
-        <a href="yes.html">Yes</a>
-        <a href="no2.html">No</a>
+        <a href="yes.html">Yes!</a>
+        <a href="no2.html">No!</a>
       </div>
     </div>
   </body>
