--- a/No3.html
+++ b/No3.html
@@ -31,7 +31,7 @@
       ></script>
 
       <h1>Manja na! Kitna bhav khaegi 😭</h1>
-      <p>bht glt baat hai 😭</p>
+      <p>bht glt baat haii 😭</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
